--- a/service-details.html
+++ b/service-details.html
@@ -106,6 +106,7 @@
 
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
+      <h2>EL PROCESO TECNOLÓGICO</h2>
 
       <div class="container">
 
