--- a/recursos.html
+++ b/recursos.html
@@ -61,12 +61,12 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <!--<li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>-->
-        <li class="current"><a href="index.html"><i class="bi bi-person navicon"></i> Inicio</a></li>
+        <li><a href="index.html"><i class="bi bi-person navicon"></i> Inicio</a></li>
         <li><a href="tyd2eso.html"><i class="bi bi-file-earmark-text navicon"></i> TYD 2º ESO</a></li>
         <li><a href="tyd3eso.html"><i class="bi bi-file-earmark-text navicon"></i> TYD 3º ESO</a></li>
         <li><a href="proyectos.html"><i class="bi bi-tools navicon"></i> Proyectos</a></li>
         <li><a href="recursos.html"><i class="bi bi-backpack2 navicon"></i> Recursos</a></li>
-        <li><a href="contacto.html"><i class="bi bi-envelope navicon"></i> Contacto</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contacto</a></li>
       </ul>
     </nav>
 
@@ -75,17 +75,6 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
-
-      <img src="assets/img/hero_bg.jpeg" alt="" data-aos="fade-in" class="">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Tecnología y Digitalización</h2>
-        <p> <span class="typed" data-typed-items="Bienvenido al aula digital, Aquí encontrarás todo lo relacionado con la asignatura de Tecnología y Digitalización, Explora y aprende: todo lo que necesitas para dominar la tecnología está aquí, Descubre el fascinante mundo de la tecnología y potencia tu creatividad en cada proyecto"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-      </div>
-
-    </section><!-- /Hero Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
